# hiveguard

./: .gitignore  Cargo.toml  README.md  test_private_key.pem  test_public_key.pem
hiveguard/: Cargo.toml
hiveguard/src/adaptors/: mod.rs
hiveguard/src/adaptors/outputs/databases/dynamodb/: mod.rs
hiveguard/src/adaptors/outputs/databases/dynamodb/tables/: sessions.rs  users.rs  verifications.rs
hiveguard/src/domain/: authentication.rs  mod.rs  password.rs
hiveguard/src/domain/tokenization/: mod.rs
hiveguard/src/ports/outputs/: mod.rs  verify.rs
hiveguard/src/ports/outputs/database/: mod.rs
hiveguard/src/ports/outputs/database/tables/: mod.rs  sessions.rs  users.rs  verifications.rs
hiveguard/src/types/: id.rs  login.rs  mod.rs  session.rs  token.rs  token_bundle.rs  user.rs  verification.rs
hiveguard/src/types/error/: conversion.rs  db.rs  mod.rs
macros/: Cargo.toml
macros/src/: io.rs  lib.rs
macros/src/database/: mod.rs
macros/src/table/: method.rs  mod.rs  path.rs  table.rs
src/: main.rs
src/adaptors/: mod.rs
src/adaptors/database/: mod.rs
src/adaptors/database/memory/: mod.rs
src/adaptors/database/memory/tables/: users.rs
src/adaptors/inputs/: mod.rs
src/adaptors/inputs/api/: mod.rs
src/adaptors/inputs/api/actix/: error.rs  mod.rs  user.rs
src/adaptors/outputs/: mod.rs
src/adaptors/outputs/database/: mod.rs
src/adaptors/outputs/database/memory/: error.rs  members.rs  mod.rs  organisations.rs  services.rs  users.rs  verifications.rs
src/adaptors/outputs/database/memory/tables/: members.rs  mod.rs  organisations.rs  resources.rs  roles.rs  scopes.rs  services.rs  users.rs  verifications.rs
src/adaptors/outputs/databases/: mod.rs
src/adaptors/outputs/databases/dynamodb/: mod.rs
src/adaptors/outputs/databases/dynamodb/tables/: mod.rs  sessions.rs  users.rs  verifications.rs
src/adaptors/outputs/mailer/: mod.rs  smtp.rs
src/adaptors/outputs/oauth/: client.rs
src/adaptors/outputs/verify/: error.rs  mod.rs
src/adaptors/outputs/verify/smtp/: deserialize.rs  mod.rs  template.html  verify.rs
src/adaptors/outputs/verify/twilio/: error.rs  mod.rs
src/config/: mod.rs
src/domain/: mod.rs
src/domain/services/: authentication.rs  crud.rs  mod.rs  paseto.rs  password.rs  registration.rs  verification.rs
src/domain/services/config/: mod.rs
src/domain/services/config/password/: algorithm.rs  argon.rs  mod.rs  params.rs  version.rs
src/domain/services/crud/: mod.rs
src/domain/services/oauth/client/: mod.rs  oauth.rs  openid.rs
src/domain/services/operations/: mod.rs  user.rs
src/domain/services/tokenizer/: mod.rs
src/domain/types/: contact.rs  either.rs  email.rs  error.rs  grant.rs  grant_type.rs  id.rs  key.rs  mail.rs  member.rs  mod.rs  number.rs  organisation.rs  paseto_keys.rs  permission.rs  phone.rs  resource.rs  role.rs  scope.rs  service.rs  token.rs  type.rs  user.rs  uuid.rs  value.rs  verification.rs
src/domain/types/config/: config.rs  github.rs  mail.rs  mod.rs  oauth.rs  paseto.rs  password.rs  provider.rs  secret.rs  serde.rs
src/domain/types/config/argon/: algorithm.rs  argon.rs  mod.rs  params.rs  version.rs
src/domain/types/config/tokenizer/: jwt.rs  mod.rs  paseto.rs  pasetos.rs
src/domain/types/config/tokenizer/paseto/: deserializer.rs  mod.rs  tokenizer.rs  types.rs
src/domain/types/error/: conversion.rs  database_error.rs  error.rs  mod.rs  type.rs
src/ports/: error.rs  mod.rs
src/ports/input/: mod.rs
src/ports/inputs/: config.rs
src/ports/output/database/: mod.rs  table.rs
src/ports/outputs/: mailer.rs  mod.rs  oauth.rs  openid.rs  verify.rs
src/ports/outputs/database/: item.rs  mod.rs  operations.rs  table.rs
src/ports/outputs/database/tables/: sessions.rs  users.rs  verifications.rs
src/ports/prelude/: error.rs  mod.rs
src/ports/traits/: error.rs
src/types/: contact.rs  either.rs  email.rs  error.rs  functions.rs  id.rs  login.rs  mod.rs  oauth_provider.rs  phone.rs  session.rs  token.rs  user.rs  verification.rs
src/types/error/: db.rs
