[package]
name = "hiveguard"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
argon2 = { version = "0.5.3", features = ["std"]}
base64 = "0.21"
bson = "2.0"
chrono = { version = "0.4.39", features = ["serde"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
env_logger = "0.11.6"
hex = "0.4"
jsonwebtoken = "9.3.1"
lettre = { version = "0.11.11", features = ["smtp-transport", "tokio1", "tokio1-native-tls", "serde"] }
log = "0.4.25"
rand = { version = "0.9.0", features = ["thread_rng", "os_rng"] }
reqwest = { version = "0.12.8", features = ["json"] }
rusty_paseto = { git = "https://github.com/abdihakim148/rusty_paseto.git", default-features = false, features = ["core", "v4_local", "v3_local", "v2_local", "v1_local", "v4_public", "v3_public", "v2_public", "v1_public"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
static_init = "1.0.3"
thiserror = "1.0.64"
tokio = { version = "1", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
mockall = "0.13.0"



[features]
http = []
memory = []
smtp = []
email = []
phone = []
twilio-phone = []
twilio-email = []

default = ["http", "memory", "smtp", "email"]
