[package]
name = "hiveguard"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = {version = "1.6.3", optional = true, features = ["behavior-version-latest"]}
aws-sdk-dynamodb = {version = "1.75.0", optional = true}
bson = "2.0"
chrono = { version = "0.4.39", features = ["serde"]}
lettre = { version = "0.11.11", features = ["smtp-transport", "tokio1", "tokio1-native-tls", "serde"]}
reqwest = { version = "0.12.8", features = ["json"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.128"
static_init = {version = "1.0.3", optional = true}
tokio = { version = "1", features = ["full"]}
url = { version = "2.5.4", features = ["serde"]}


[features]
dynamodb = ["aws-config", "aws-sdk-dynamodb"]

default = ["dynamodb"]
