[package]
name = "hiveguard"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = {version = "1.6.3", optional = true, features = ["behavior-version-latest"]}
aws-sdk-dynamodb = {version = "1.75.0", optional = true}
bson = "2.0"
chrono = { version = "0.4.39", features = ["serde"]}
lettre = { version = "0.11.11", features = ["smtp-transport", "tokio1", "tokio1-native-tls", "serde"]}
reqwest = { version = "0.12.8", features = ["json"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.128"
static_init = { version = "1.0.3", optional = true }
tokio = { version = "1", features = ["full"]}
url = { version = "2.5.4", features = ["serde"]}
macros = {path = "../macros"}
argon2 = { version = "0.5.3", optional = true}
password-hash = { version = "0.5.0", features = ["getrandom"] }
rand = { version = "0.9.1", features = ["thread_rng"] }
rusty_paseto = { version = "0.7.0", features = ["core"] }


[features]
email = []
phone = []
dynamodb = ["aws-config", "aws-sdk-dynamodb"]
static_init = ["dep:static_init"]
default = ["dynamodb"]
